--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Brooke Chalmers <breq@breq.dev>"]
 python = "^3.8"
 Flask = "^2.0.1"
 Flask-SQLAlchemy = "^2.5.1"
+python-dotenv = "^0.18.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
