Add basic login functionality to the server

--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.8"
 Flask = "^2.0.1"
 Flask-SQLAlchemy = "^2.5.1"
 python-dotenv = "^0.18.0"
+PyJWT = "^2.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
