--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -10,6 +10,8 @@ Flask = "^2.0.1"
 Flask-SQLAlchemy = "^2.5.1"
 python-dotenv = "^0.18.0"
 PyJWT = "^2.1.0"
+psycopg2-binary = "^2.9.1"
+Flask-Cors = "^3.0.10"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
