--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -9,9 +9,9 @@ python = "^3.8"
 Flask = "^2.0.1"
 Flask-SQLAlchemy = "^2.5.1"
 python-dotenv = "^0.18.0"
-PyJWT = "^2.1.0"
 psycopg2-binary = "^2.9.1"
 Flask-Cors = "^3.0.10"
+Flask-JWT-Extended = "^4.2.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
