--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -12,6 +12,7 @@ python-dotenv = "^0.18.0"
 psycopg2-binary = "^2.9.1"
 Flask-Cors = "^3.0.10"
 Flask-JWT-Extended = "^4.2.1"
+Flask-Migrate = "^3.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
