--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -13,6 +13,8 @@ psycopg2-binary = "^2.9.1"
 Flask-Cors = "^3.0.10"
 Flask-JWT-Extended = "^4.2.1"
 Flask-Migrate = "^3.0.1"
+sendgrid = "^6.7.1"
+requests = "^2.25.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
