--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -15,8 +15,9 @@ Flask-JWT-Extended = "^4.2.1"
 Flask-Migrate = "^3.0.1"
 sendgrid = "^6.7.1"
 requests = "^2.25.1"
-snowcloud = "^0.1.0"
 gunicorn = "^20.1.0"
+minio = "^7.1.0"
+snowcloud = "^0.1.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
