--- a/server/package.json
+++ b/server/package.json
@@ -9,10 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "prisma": "^2.27.0"
+    "@prisma/client": "^2.27.0",
+    "express": "^4.17.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "prisma": "^2.27.0"
   }
 }
