--- a/server/package.json
+++ b/server/package.json
@@ -9,8 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/router": "^10.0.0",
     "@prisma/client": "^2.27.0",
-    "express": "^4.17.1"
+    "jsonwebtoken": "^8.5.1",
+    "koa": "^2.13.1",
+    "koa-bodyparser": "^4.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.12",
