--- a/server/package.json
+++ b/server/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "@koa/router": "^10.0.0",
     "@prisma/client": "^2.27.0",
+    "dotenv": "^10.0.0",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.1",
-    "koa-bodyparser": "^4.3.0"
+    "koa-bodyparser": "^4.3.0",
+    "koa-compose": "^4.1.0",
+    "node-fetch": "^2.6.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.12",
