--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "API server for Flowspace",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -17,9 +18,11 @@
     "koa-bodyparser": "^4.3.0",
     "koa-compose": "^4.1.0",
     "node-fetch": "^2.6.1",
+    "supertest": "^6.1.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "jest": "^27.0.6",
     "nodemon": "^2.0.12",
     "prisma": "^2.27.0"
   }
