--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "API server for Flowspace",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "jest"
   },
   "author": "",
@@ -18,13 +19,13 @@
     "koa-bodyparser": "^4.3.0",
     "koa-compose": "^4.1.0",
     "node-fetch": "^2.6.1",
-    "supertest": "^6.1.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "jest": "^27.0.6",
     "nodemon": "^2.0.12",
     "pg": "^8.6.0",
+    "supertest": "^6.1.3",
     "prisma": "^2.27.0"
   }
 }
