--- a/server/package.json
+++ b/server/package.json
@@ -27,5 +27,9 @@
     "pg": "^8.6.0",
     "supertest": "^6.1.3",
     "prisma": "^2.27.0"
+  },
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=7.0.0"
   }
 }
