--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/multer": "^3.0.0",
     "@koa/router": "^10.0.0",
     "@prisma/client": "^2.27.0",
     "dotenv": "^10.0.0",
@@ -18,6 +19,8 @@
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
     "koa-compose": "^4.1.0",
+    "minio": "^7.0.18",
+    "multer": "^1.4.2",
     "node-fetch": "^2.6.1",
     "uuid": "^8.3.2"
   },
@@ -25,8 +28,8 @@
     "jest": "^27.0.6",
     "nodemon": "^2.0.12",
     "pg": "^8.6.0",
-    "supertest": "^6.1.3",
-    "prisma": "^2.27.0"
+    "prisma": "^2.27.0",
+    "supertest": "^6.1.3"
   },
   "engines": {
     "node": ">=16.0.0",
