Add Postgres for tests

--- a/.github/workflows/jest-server.yml
+++ b/.github/workflows/jest-server.yml
@@ -3,6 +3,21 @@ on: [push]
 jobs:
   Test-Server:
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-tries 5
+        ports:
+          - 5432:5432
+    env:
+      DATABASE_URL: postgresql://postgres:postgres@localhost:5432/flowspace
     steps:
       - uses: actions/checkout@v2
       - name: Install modules
