gh actions typo

--- a/.github/workflows/jest-server.yml
+++ b/.github/workflows/jest-server.yml
@@ -13,7 +13,7 @@ jobs:
           --health-cmd pg_isready
           --health-interval 10s
           --health-timeout 5s
-          --health-tries 5
+          --health-retries 5
         ports:
           - 5432:5432
     env:
