--- a/.github/workflows/jest-server.yml
+++ b/.github/workflows/jest-server.yml
@@ -19,8 +19,8 @@ jobs:
       minio:
         image: minio/minio@RELEASE.2021-07-15T22-27-34Z
         env:
-          MINIO_ROOT_USER=minio
-          MINIO_ROOT_PASSWORD=minio
+          MINIO_ROOT_USER: minio
+          MINIO_ROOT_PASSWORD: minio
         options: >-
           --health-cmd "curl -f http://localhost:9000/minio/index.html || exit 1"
           --health-interval 10s
