--- a/.github/workflows/jest-server.yml
+++ b/.github/workflows/jest-server.yml
@@ -17,7 +17,7 @@ jobs:
         ports:
           - 5432:5432
       minio:
-        image: minio/minio@RELEASE.2021-07-15T22-27-34Z
+        image: minio/minio:RELEASE.2021-07-15T22-27-34Z
         env:
           MINIO_ROOT_USER: minio
           MINIO_ROOT_PASSWORD: minio
