--- a/.github/workflows/jest-server.yml
+++ b/.github/workflows/jest-server.yml
@@ -22,7 +22,7 @@ jobs:
           MINIO_ROOT_USER: minio
           MINIO_ROOT_PASSWORD: minio
         options: >-
-          --health-cmd "curl -f http://localhost:9000/minio/index.html || exit 1"
+          --health-cmd "curl -f http://localhost:9000/minio/health/ready || exit 1"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
