--- a/.github/workflows/jest-server.yml
+++ b/.github/workflows/jest-server.yml
@@ -17,7 +17,7 @@ jobs:
         ports:
           - 5432:5432
       minio:
-        image: minio/minio:RELEASE.2021-07-15T22-27-34Z
+        image: lazybit/minio # https://stackoverflow.com/a/64188150
         env:
           MINIO_ROOT_USER: minio
           MINIO_ROOT_PASSWORD: minio
@@ -26,6 +26,7 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+
         ports:
           - 9000:9000
     env:
