Create MinIO Bucket for testing

--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "jest"
+    "test": "jest",
+    "createMinioBucket": "node conftest/createMinioBucket.js"
   },
   "author": "",
   "license": "ISC",
