--- a/.github/workflows/jest-server.yml
+++ b/.github/workflows/jest-server.yml
@@ -44,6 +44,9 @@ jobs:
       - name: Install modules
         working-directory: server
         run: npm install
+      - name: Create MinIO bucket
+        working-directory: server
+        run: npm run createMinioBucket
       - name: Run tests
         working-directory: server
         run: npm test
