--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,8 @@
     "@koa/router": "^10.0.0",
     "@prisma/client": "^2.28.0",
     "dotenv": "^10.0.0",
+    "ioredis": "^4.27.7",
+    "ipaddr.js": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
