--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "ioredis-mock": "^5.6.0",
     "jest": "^27.0.6",
     "nodemon": "^2.0.12",
     "pg": "^8.6.0",
