--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "minio": "^7.0.18",
     "multer": "^1.4.2",
     "node-fetch": "^2.6.1",
+    "sharp": "^0.28.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
