--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "remark-gfm": "^1.0.0",
+    "source-map-explorer": "^2.5.2",
     "swr": "^0.5.6",
     "use-local-storage-state": "^10.0.0",
     "web-vitals": "^1.1.2",
@@ -29,6 +30,7 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
