--- a/server/package.json
+++ b/server/package.json
@@ -22,11 +22,13 @@
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
     "koa-compose": "^4.1.0",
+    "koa-easy-ws": "^1.3.0",
     "minio": "^7.0.18",
     "multer": "^1.4.2",
     "node-fetch": "^2.6.1",
     "sharp": "^0.28.3",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "ws": "^7.5.3"
   },
   "devDependencies": {
     "ioredis-mock": "^5.6.0",
